Fixed link styling on collapse.

--- a/css/index.css
+++ b/css/index.css
@@ -102,8 +102,8 @@ a {
   }
 
   .contact a {
-    margin-right: 0;
-    margin-bottom: 1rem;
+    padding-right: 0;
+    padding-bottom: 1rem;
   }
 
   .contact a:last-child {
